clusters/test-deployment/apps/traefik-helmrelease.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
