clusters/test-deployment/apps/clutterstock-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clutterstock-api
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clutterstock-api
  template:
    metadata:
      labels:
        app: clutterstock-api
        app.kubernetes.io/name: clutterstock-api
    spec:
      containers:
      - name: clutterstock-api
        image: ghcr.io/hwinther/clutterstock/api:0.18.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: clutterstock-api
  namespace: test
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: clutterstock-api
