clusters/test-deployment/apps/clutterstock-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clutterstock-frontend
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clutterstock-frontend
  template:
    metadata:
      labels:
        app: clutterstock-frontend
        app.kubernetes.io/name: clutterstock-frontend
    spec:
      containers:
      - name: clutterstock-frontend
        image: ghcr.io/hwinther/clutterstock/frontend:0.9.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: clutterstock-frontend
  namespace: test
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: clutterstock-frontend
