clusters/test-deployment/apps/redisinsight-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
        app.kubernetes.io/name: redisinsight
    spec:
      containers:
      - name: redisinsight
        image: redis/redisinsight:latest
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        ports:
        - name: http
          containerPort: 5540
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
  namespace: test
spec:
  type: ClusterIP
  ports:
  - port: 5540
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: redisinsight
